Fix dropdown fucking z-index and header-bg fucking z-index issue

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -81,7 +81,6 @@
 				padding:0px;
 				padding-top:5px;
 				padding-left:10px;
-				/*border: 1px solid #999999;*/
 			}
 
 			.icon-blue{
@@ -492,7 +491,7 @@
 		margin-left: 2.5%;
 		margin-right: 2.5%;
 		width:95%;
-		background-color: whitesmoke;
+		background-color: transparent;
 		padding:0;
 		margin-top: 0px;
 	}
